results/SpecGenBench/conversational/log-FindClosestNum-2023_06_27_02_13_25.txt
import java.util.Math;

class FindClosestNum {
    
    //@ requires nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) <= Math.abs(nums[i]));
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) < Math.abs(nums[i]) || (Math.abs(\result) == Math.abs(nums[i]) && \result >= nums[i]));
    public int findClosestNumber(int[] nums) {
        int ans = Integer.MAX_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) <= Math.abs(nums[i]));
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) < Math.abs(nums[i]) || (Math.abs(ans) == Math.abs(nums[i]) && ans >= nums[i]));
        for(int num : nums) {
            int absNum = Math.abs(num);
            if(absNum < Math.abs(ans) || (absNum == Math.abs(ans) && num > ans)) {
                ans = num;
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:1: error: cannot find symbol
import java.util.Math;
                ^
  symbol:   class Math
  location: package java.util
1 error

class FindClosestNum {
    
    //@ requires nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) <= Math.abs(nums[i]));
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) < Math.abs(nums[i]) || (Math.abs(\result) == Math.abs(nums[i]) && \result >= nums[i]));
    public int findClosestNumber(int[] nums) {
        int ans = Integer.MAX_VALUE;
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) <= Math.abs(nums[i]));
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) < Math.abs(nums[i]) || (Math.abs(ans) == Math.abs(nums[i]) && ans >= nums[i]));
        for(int num : nums) {
            int absNum = Math.abs(num);
            if(absNum < Math.abs(ans) || (absNum == Math.abs(ans) && num > ans)) {
                ans = num;
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:8: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method findClosestNumber
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) <= Math.abs(nums[i]));
            ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:9: verify: The prover cannot establish an assertion (LoopInvariantBeforeLoop) in method findClosestNumber
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) < Math.abs(nums[i]) || (Math.abs(ans) == Math.abs(nums[i]) && ans >= nums[i]));
            ^
2 verification failures

class FindClosestNum {
    
    //@ requires nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) <= Math.abs(nums[i]));
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) < Math.abs(nums[i]) || (Math.abs(\result) == Math.abs(nums[i]) && \result >= nums[i]));
    public int findClosestNumber(int[] nums) {
        int ans = nums[0];
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) <= Math.abs(nums[i]));
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) < Math.abs(nums[i]) || (Math.abs(ans) == Math.abs(nums[i]) && ans >= nums[i]));
        for(int i = 1; i < nums.length; i++) {
            int absNum = Math.abs(nums[i]);
            if(absNum < Math.abs(ans) || (absNum == Math.abs(ans) && nums[i] > ans)) {
                ans = nums[i];
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:8: error: variable i is already defined in method findClosestNumber(int[])
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) <= Math.abs(nums[i]));
                                     ^
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:9: error: variable i is already defined in method findClosestNumber(int[])
        //@ maintaining (\forall int i; 0 <= i && i < nums.length; Math.abs(ans) < Math.abs(nums[i]) || (Math.abs(ans) == Math.abs(nums[i]) && ans >= nums[i]));
                                     ^
2 errors

class FindClosestNum {
    
    //@ requires nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) <= Math.abs(nums[i]));
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) < Math.abs(nums[i]) || (Math.abs(\result) == Math.abs(nums[i]) && \result >= nums[i]));
    public int findClosestNumber(int[] nums) {
        int ans = nums[0];
        //@ maintaining (\forall int j; 0 <= j && j < i; Math.abs(ans) <= Math.abs(nums[j]));
        //@ maintaining (\forall int j; 0 <= j && j < i; Math.abs(ans) < Math.abs(nums[j]) || (Math.abs(ans) == Math.abs(nums[j]) && ans >= nums[j]));
        for(int i = 1; i < nums.length; i++) {
            int absNum = Math.abs(nums[i]);
            if(absNum < Math.abs(ans) || (absNum == Math.abs(ans) && nums[i] > ans)) {
                ans = nums[i];
            }
        }

        return ans;
    }
}
/home/max/Documents/JMLGPT/tmp/FindClosestNum.java:11: verify: The prover cannot establish an assertion (PossiblyNegativeIndex) in method findClosestNumber
            int absNum = Math.abs(nums[i]);
                                      ^
1 verification failure

class FindClosestNum {
    
    //@ requires nums.length > 0;
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) <= Math.abs(nums[i]));
    //@ ensures (\forall int i; 0 <= i && i < nums.length; Math.abs(\result) < Math.abs(nums[i]) || (Math.abs(\result) == Math.abs(nums[i]) && \result >= nums[i]));
    public int findClosestNumber(int[] nums) {
        int ans = nums[0];
        //@ maintaining (\forall int j; 0 <= j && j < i; Math.abs(ans) <= Math.abs(nums[j]));
        //@ maintaining (\forall int j; 0 <= j && j < i; Math.abs(ans) < Math.abs(nums[j]) || (Math.abs(ans) == Math.abs(nums[j]) && ans >= nums[j]));
        for(int i = 1; i < nums.length; i++) {
            //@ assume i >= 0;
            int absNum = Math.abs(nums[i]);
            if(absNum < Math.abs(ans) || (absNum == Math.abs(ans) && nums[i] > ans)) {
                ans = nums[i];
            }
        }

        return ans;
    }
}

